# base-ui

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/animation/: animation.rs  mod.rs
src/core/: error_handler.rs  gl_context.rs  logger.rs  mod.rs  window.rs
src/figlet/: figlet_3d.rs  mod.rs
src/graphics/: mod.rs  renderer.rs  shader.rs  texture.rs
src/graphics/shaders/: basic.frag  texture.frag  texture.vert
src/style/: color.rs
src/text/: font.rs  mod.rs  text_renderer.rs
src/text/shaders/: text.frag  text.vert
src/widget/: mod.rs
src/widget/widgets/: button.rs  context_menu.rs  image_view.rs  mod.rs  shape.rs  text_view.rs
