[package]
name = "base-ui"
version = "1.0.1"
authors = ["fkdldkrhya <sihun.choi@rhya-network.com>"]
description = "base-ui crate"
keywords = ["base-ui", "ui", "crate"]
edition = "2021" 
license = "MIT" #라이센스
exclude = []
readme = "README.md"
repository = "https://github.com/fkdldkRhya/base-ui" #레포지토리
documentation = "https://github.com/fkdldkRhya/base-ui/blob/master/README.md" #문서 사이트
homepage = "https://github.com/fkdldkRhya/base-ui/blob/master/README.md" #홈페이지 사이트

[dependencies]
gl = "0.14"
glutin = "0.28"
rusttype = "0.9"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
nalgebra-glm = "0.3"
figlet-rs = "0.1.5"
image = "0.24"
reqwest = { version = "0.11", features = ["blocking"] }
rand = "0.8"
backtrace = "0.3"
native-dialog = "0.6"